Fix layout issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -93,6 +93,14 @@ table {
   padding: 2%;
 }
 
+#hackathon-table {
+  margin-top: -20px;
+}
+
+#upcoming {
+  margin-top: 49px;
+}
+
 .theme-dropdown .dropdown-menu {
   position: static;
   display: block;
